--- a/.oblivious/Dockerfile
+++ b/.oblivious/Dockerfile
@@ -7,4 +7,6 @@ COPY ./requirements.txt /code/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
+something stupid
+
 COPY ./src/ /code/
